--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "six-cities",
   "version": "4.0.0",
+  "author": {
+    "name": "Устинов Даниил"
+  },
   "description": "Проект «Шесть городов» от HTML Academy",
   "keywords": [
     "rest",
@@ -14,7 +17,11 @@
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
-    "ts": "ts-node"
+    "ts": "ts-node",
+    "cli": "npm run build && node ./dist/main.js"
+  },
+  "dependencies": {
+    "chalk": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "18.16.3",
