--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
     "ts": "ts-node",
-    "cli": "npm run build && node ./dist/main.js"
+    "cli": "npm run build && node ./dist/main.js",
+    "mock:server": "json-server --watch mocks/mock-server-data.json --port 3123"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "chalk": "^5.3.0"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@typescript-eslint/parser": "5.46.0",
     "eslint": "8.39.0",
     "eslint-config-htmlacademy": "9.1.1",
+    "json-server": "^1.0.0-beta.3",
     "rimraf": "3.0.2",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
